# pmk-firmware

./: .gitignore  README.md  build.sh
common/: config.h  features.h  keycodes.h  lwipopts.h  lwipopts_examples_common.h  mouse.h  protocol.h  uart_protocol.h  usb_hid.h  usb_serial_protocol.h
dongle/: CMakeLists.txt.working  main.c  tusb_config.h  usb_descriptors.c  usb_hid.c
keymaps/default/: keymap.c
left_half/: CMakeLists.txt  CMakeLists.txt.working  main.c  main.c.working
lib/features/: combos.c  combos.h  layers.c  layers.h  modtap.c  modtap.h  mouse.c  oneshot.c  tapdance.c  tapdance.h
lib/matrix/: matrix.c  matrix.h
lib/utils/: timer.c  timer.h
right_half/: CMakeLists.txt  main.c
